Changes for 1.3.10
   Improve code integration of animation loop setting
   Fix building for Windows
   Add support for autotools out-of-tree build
   Add press F1 for help to OBJ export options window
   Add support for exporting Inter-Quake Export (IQE) models
   Fix new/rename material window titles
   Move animation Loop setting between FPS and Start/Stop buttons
   Don't sort opaque RGBA textures in 3D Alpha Blend view mode
   Add bone joint rotation to properties panel in non-animation mode
   Update plugin API usage for builtin features
   Fix crash when opening Paint Texture

Changes for 1.3.9
   Switch from Qt4 to Qt5
   Make animation loop a per-animation setting that is saved in .mm3d files (mm3d format is now 1.7)
   Allow user to set fixed grid
   Fix incorrect texture rending for materials that share GL textures
   Fix insertFrameAnimFrame when frame is not at end
   Fix saving MD3 models with no frame animations
   Add a dialog to confirm saving a 3 part MD3 player model (before it always assumed yes)
   Made MD3 player support more general
      Read animation names / looping from animation.cfg (names fallback to
         Quake 3 ones if missing)
      Write animation names / looping from model animations instead of using
         a hard coded list
      Save all unknown points (e.g., not tag_torso, tag_head, or tag_weapon)
         as tags in all model parts
      Added support for "ALL_" (legs, torso, head) and "HEAD_" animation prefixes
      Don't require tag_weapon to export a MD3 player model
   Store options from animation.cfg in meta data "MD3_CFG_(keyword)" "(value)"
      instead of special handling for 'sex','footsteps','headoffset',
      'fixedtorso','fixedlegs' which were stored as MD3_(keyword).
      MD3_sex, MD3_footsteps, etc are still supported for saving
   Add support for animation names to be at the beginning of each animation
      line in animation.cfg. Meta data "MD3_AnimKeyword" "1". Automatically